# CivicNewspaper

./: .gitattributes  .gitignore  00-executive-audit.md  01-engineering-deepdive.md  02-uiux-deepdive.md  03-documentation-deepdive.md  04-test-deepdive.md  05-qa-deepdive.md  Antigravity.md  CHANGELOG.md  CODE_SIGNING_POLICY.md  CONTRIBUTING.md  FAQ.md  IMPROVEMENT_PLAN.md  NOTICES.md  README.md  SECURITY.md  audit-lite-civicnews-v025-hotpatch-2026-05-28.md  carried-debt.md  ci_log.txt  eslint.config.js  extract.py  fix_tests.py  index.html  inspect_html.py  instructions.txt  package-lock.json  package.json  pyproject.toml  search_response.html  test_search.py  vite.config.ts  vitest.config.ts
.agent-runs/2026-05-25-execute-v0-2-phase-4/: director-decisions.md  draft-provenance.md  implementation-report.md  manifest.yaml  plan.md  research.md  scope-lock.yaml
.agent-runs/2026-05-25-phase-4-remediation/: draft-provenance.md  manifest.yaml  plan.md  preflight-report.md  research.md  verification-report.md
.agent-runs/2026-05-25-phase-4-source-tier-prompts-daily-scan-rewrite/: critique.md  directive.yaml  director-decisions.md  draft-provenance.md  manifest.sha  (+9 more)
.agent-workflows/: PROJECT_CONTROL_PLANE.md  scope-overrides.md  section2-auth.json
assistant-skill/: SKILL.md  client.js  skill.json
audit-civicnews-2026-05-28/: 00-executive-audit.md  01-engineering-deepdive.md  02-uiux-deepdive.md  03-documentation-deepdive.md  04-test-deepdive.md  05-qa-deepdive.md  next-sprint-watchlist.md  sprint-punchlist.md
docs/: api.html  api.md  architecture.html  architecture.md  discussion_seeds.html  discussion_seeds.md  doc-page.css  handoff-next-codex.md  implementation-plan-v0.3.0-to-v1.0.0.html  implementation-plan-v0.3.0-to-v1.0.0.md  index.html  install.html  install.md  manual-smoke.md  prd-local-llm-newsroom-v1.html  prd-local-llm-newsroom-v1.md  publishing-connectors.html  publishing-connectors.md  publishing-phase-0-audit.md  release-readiness.html  release-readiness.md  script.js  security-advisory-waivers.json  style.css  troubleshooting.html  troubleshooting.md  user_manual.html  user_manual.md
forensic/: v0.2-pipeline-integrity-failures.md
scratch/: pr_comment_v2.md
scripts/: .directive-2026-05-25-phase-4.sha256  .dod-phase-1.sha256  .dod-phase-2.sha256  .dod-phase-3.sha256  build-frontend-with-git-id.mjs  check-design-tokens.mjs  coverage-gate.test.ts  dependency-audit.ps1  desktop-smoke.ps1  fetch-ollama-binaries.sh  model-bakeoff.mjs  ollama-binaries-shas.txt  packaged-first-run-walkthrough.ps1  packaged-webview-driver.mjs  prepare-rc-evidence.ps1  release-smoke.ps1  render_public_docs.py  sign-windows-artifact.cmd  sign-windows-artifact.ps1  sign-windows-shim.cs  ui-smoke.mjs  verify-hosted-release-evidence.mjs  verify-release-asset-hashes.mjs  verify-release-assets.sh  verify-release-scripts.test.ts  verify-release.sh  verify-v0.2-phase-1-dod.sh  verify-v0.2-phase-2-dod.sh  verify-v0.2-phase-3-dod.sh  verify-windows-signatures.ps1  windows-installer-smoke.ps1
src/: App.css  App.test.tsx  App.tsx  bulkImportFixture.test.ts  bulkImportParser.test.ts  bulkImportParser.ts  formatPullProgressLine.test.ts  ipc.test.ts  ipc.ts  layout_css_guard.test.ts  models.json  reproduction.test.tsx  setupTests.ts  test_useapp_daily_scan_passes_settings_model.test.tsx  useApp.test.tsx  useApp.ts
src-tauri/: .gitignore  BETA_NOTICE.txt  Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json  tauri.linux.conf.json  tauri.windows-signing.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql  0002_transcripts.sql  0003_settings.sql  0004_source_tier.sql  0005_daily_scans.sql  0006_daily_scan_lead_source_nullable.sql  0007_source_tier_check.sql  0008_draft_publish_gate.sql  0009_daily_scan_lead_context.sql  0010_publish_runs.sql  0011_subscribers.sql  0012_civic_intelligence.sql  0013_verification_queue.sql  0014_beat_memory.sql  0015_story_quality_metadata.sql  0016_recurrence_metadata.sql  0017_publish_decision_audit.sql  0018_evidence_source_identity.sql  0019_application_id.sql
src-tauri/prompts/: README.md  aggregator.md
src-tauri/prompts/aggregator/: 01-daily-scan.md
src-tauri/prompts/audit/: 04-dark-signal-desk.md  05-integrity-checker.md
src-tauri/prompts/story/: 07-plain-language.md
src-tauri/prompts/utility/: 08-civic-grounding.md
src-tauri/src/: lib.rs  main.rs  tauri_cmds.rs  test_support.rs
src-tauri/src/core/: app_paths.rs  auth.rs  backups.rs  compiler.rs  content_quality.rs  daily_scan.rs  db.rs  detectors.rs  diagnostics.rs  discovery.rs  guardrails.rs  intelligence.rs  llm.rs  migrations.rs  mod.rs  osint_detectors.rs  prompts.rs  publisher.rs  reproduction_tests.rs  scraper.rs  server.rs  server_tests.rs  source_grounding.rs  tests.rs  verification.rs
src-tauri/tests/fixtures/: test-ollama-fixture-x86_64-apple-darwin  test-ollama-fixture-x86_64-unknown-linux-gnu
templates/: index.html  post.html  styles.css
test-comms/: ACTIVE_DIRECTIVE.md  README.md  TESTER_READ_ME_FIRST.md  protocol.md
(+2337 files in other folders)
