[package]
name = "civicnews"
version = "0.1.0"
description = "A local-first newsroom tool with verifiable trust chain."
authors = ["Scott Converse <sconverse@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
reqwest = { version = "0.12", features = ["json"] }
feed-rs = "2"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
pulldown-cmark = "0.10"

[dev-dependencies]
tempfile = "3"

