[package]
name = "civicnews"
version = "0.2.8"
description = "A local-first newsroom tool with verifiable trust chain."
authors = ["Scott Converse <sconverse@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
# Constant-time comparison for auth secrets (pairing PIN hash / bearer token) so
# equality checks don't leak length/prefix via a timing side channel. See ENG-M2.
subtle = "2"
reqwest = { version = "0.12", features = ["json"] }
feed-rs = "2"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
pulldown-cmark = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4.3"
html-escape = "0.2"
http-body-util = "0.1.3"
tauri-plugin-dialog = "2.7.1"
async-trait = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }
pdf-extract = "0.12"
keyring = "3"

[dev-dependencies]
tempfile = "3"
bytes = "1"
futures-util = "0.3"
# `tower::ServiceExt::oneshot` is used only by the Axum server tests
# (src/core/server_tests.rs). It was previously a normal dependency, but the
# production server builds its Router without any `tower` layers, so it belongs
# in dev-dependencies. See ENG-Min1.
tower = { version = "0.4", features = ["util"] }
